// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is-used-data-type should check if a data type is used 1`] = `
{
  "content": [
    {
      "text": "true",
      "type": "text",
    },
  ],
}
`;

exports[`is-used-data-type should handle non-existent data type 1`] = `
{
  "content": [
    {
      "text": "Error using is-used-data-type:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The data type could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`is-used-data-type should return false when data type is not used 1`] = `
{
  "content": [
    {
      "text": "false",
      "type": "text",
    },
  ],
}
`;

exports[`is-used-data-type should return true when data type is used in document type without documents 1`] = `
{
  "content": [
    {
      "text": "false",
      "type": "text",
    },
  ],
}
`;
